media: Always use the first registered CDM

See BUG for more details. With this CL, for a given key system, the
first registered CDM will always be used for handling the capability
query, and for creating the CDM instance. Hence, there's no way for any
inconsistency to happen (as described in the BUG).

This means that a later registered CDM will not be used until browser
restart (e.g. component updated CDM), which should be fine in most
cases.

BUG=599588

Change-Id: I9390f4ea73e5f40395ab8f87fc1d9c1c1f5c75ad
Reviewed-on: https://chromium-review.googlesource.com/889982
Reviewed-by: David Dorwin <ddorwin@chromium.org>
Reviewed-by: John Rummell <jrummell@chromium.org>
Commit-Queue: Xiaohan Wang <xhwang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#532678}
Former-commit-id: 15aba67733cb10140cd9c197ac9b131e718cd71b